--- a/Playing with CSS Variables and JS/styles.css
+++ b/Playing with CSS Variables and JS/styles.css
@@ -1,3 +1,20 @@
+/* CSS変数↓rootをいじればvarの箇所が一括で変更できる優れもの！ */
+:root {
+  --base: #ffc600;
+  --spacing: 10px;
+  --blur: 10px;
+}
+
+img {
+  padding: var(--spacing);
+  background: var(--base);
+  filter: blur(var(--blur));
+}
+
+.h1 {
+  color: var(--base);
+}
+
 body {
   text-align: center;
   background: #193549;
@@ -13,4 +30,8 @@ body {
 
 input {
   width: 100px;
+}
+
+.hl {
+  color: var(--base);
 }
